# machine_learning_compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  sd
.github/workflows/: CI.yml
TenGen/: CMakeLists.txt  TenGen.h
TenGen/einsum/backend/: TensorOperation.h
TenGen/mini_jit/backend/: Kernel.h
TenGen/mini_jit/generator/: Brgemm.h  Unary.h  Util.h
TenGen/mini_jit/instructions/: Encoding.h
TenGen/tensor/: Tensor.h
TenGen/types/: Structs.h  Types.h
TenGenTests/: CMakeLists.txt  TenGenTestsHelper.h
TenGenTests/einsum/backend/: CMakeLists.txt  TensorOperationTests.cpp  TensorOperationTestsNEW.cpp
TenGenTests/mini_jit/generator/: BrgemmTests.cpp  CMakeLists.txt  UnaryTests.cpp  UtilTests.cpp
TenGenTests/mini_jit/instructions/: CMakeLists.txt  EncodingTests.cpp
TenGenTests/tensor/: CMakeLists.txt  TensorTests.cpp  TensorXTensorTests.cpp
assembly_examples/task_1/hello_assembly/: run_driver.sh  task.md
assembly_examples/task_2/: CMakeLists.txt  add_values  add_values.cpp  add_values_full_disassembly.txt  add_values_hex_dump.txt  copy_asm.s  logs_and_solutions.txt  run.sh
assembly_examples/task_2/gdb_files/: add_values
assembly_examples/task_3/: driver.cpp  results.txt
assembly_examples/task_3/kernels/: matmul_1.s
assembly_examples/task_3/microkernel/: CMakeLists.txt  driver.cpp
assembly_examples/task_3/microkernel/kernels/: matmul_16_6_1.s  matmul_16_6_64.s  matmul_64_48_64.s  matmul_64_6_64.s
benchmark/: CMakeLists.txt  bench_brgemm.cpp  bench_gemm.cpp  bench_iris_model.cpp  bench_ten_op_backend.cpp  bench_ten_op_optimize.cpp  bench_tree.cpp  bench_unary_jit.cpp  check_iris_model.cpp  check_ten_op_unary.cpp  driver.cpp  gemm_m4_aarch64.csv
benchmarks/microbenchmarks/: CMakeLists.txt  microbenchmark_driver.cpp
benchmarks/microbenchmarks/latency/: Makefile  driver.cpp
benchmarks/microbenchmarks/latency/kernels/: add.s
benchmarks/microbenchmarks/throughput/: CMakeLists.txt  add_sr.s
benchmarks/microbenchmarks/throughput/kernels/: mul.s
benchmarks/microbenchmarks_gp/latency/: CMakeLists.txt
benchmarks/microbenchmarks_neon/: CMakeLists.txt
benchmarks/microbenchmarks_neon/kernels/: fmadd.s  fmla.s
data/: add_values.s  hello_assembly.c
data/task1/: compile.sh  driver  hello_assembly.c
docs/: README.txt
docs/source/: conf.py  index.rst
docs/source/_static/: logs_and_solutions.txt  m4_brgemm.csv  m4_gemm.csv
docs/source/chapters/: individual_phase.rst  week_01.rst  week_02.rst  week_03.rst  week_04.rst  week_05.rst  week_06.rst  week_07.rst  week_08.rst  week_09.rst  week_10.rst
hello_assembly/: CMakeLists.txt
hello_assembly/assembly_examples/neon/: driver.cpp  run.sh
hello_assembly/assembly_examples/neon/kernels/: matmul_2.s  matmul_64_64_64.s  trans_neon_8_8.s
hello_assembly/assembly_examples/task_1/assembly_function/: add_values.hex
hello_assembly/assembly_examples/task_1/hello_assembly/: driver.cpp  hello_assembly_gcc.asm
hello_assembly/assembly_examples/task_2/: CMakeLists.txt  task.md
hello_assembly/benchmarks/microbenchmarks_gp/latency/kernels/: mul.s
hello_assembly/benchmarks/microbenchmarks_gp/throughput/: CMakeLists.txt
hello_assembly/benchmarks/microbenchmarks_neon/: driver.cpp  ergebnisse.txt
model/: CMakeLists.txt  model.cpp  simple_matmul.cpp
plot/: plot_16_6_k.py
plot/data/: bm_16x6xK.csv
python/: docu.md  main.py  model.torchpp  requierments.txt  setup.py  test.cpp  test_small_gemm.py
python/components/: __init__.py  plot.py  run_inference.py  setup.py
python/data/: example.csv  inference_times.csv  model.pt  model.torchpp  model_state_dict.pt
python/modules/: __init__.py  basic_net.py
python/tests/: __init__.py  einsum-exp_basic-net.py  sample.py
src/einsum/: CMakeLists.txt  benchmark_binary.cpp  check_einsum.cpp  compile_command.txt  execute_command.txt  test_binary.cpp  test_optimize.cpp
src/einsum/backend/: TensorOperation.cpp  TensorOperation.h  TensorOperationUnary.cpp  TensorOperationUnary.h
src/einsum/include/: einsum_ref.cpp  einsum_ref.h
src/einsum/trees/: einsum_trees.cpp  einsum_trees.h
src/jiter/: CMakeLists.txt
src/jiter/instructions/: base.cpp  instructions.h  neon.cpp  run.sh  test_driver.cpp
src/mini_jit/: CMakeLists.txt  benchmark.cpp  check_brgemm.cpp  driver.cpp
src/mini_jit/backend/: Kernel.cpp  Kernel.h
src/mini_jit/generator/: Brgemm.cpp  Brgemm.h  TensorOperation.h  Unary.cpp  Unary.h  Util.cpp  Util.h  util.cpp  util.h
src/mini_jit/include/: gemm_ref.cpp  gemm_ref.h
src/mini_jit/instructions/: base.cpp  instructions.h  neon.cpp  test_driver.cpp
src/mini_jiter/instructions/: base.cpp  instructions.h  neon.cpp  run.sh  test_driver.cpp
src/tensor/: Tensor.h  tensor.cpp  tensor.h
test/: CMakeLists.txt  run.sh  test_base_instructions.cpp  test_gen_methods.cpp  test_mini_jit.cpp  test_neon_instructions.cpp  test_util.cpp  test_utils.cpp  test_utils.h
test/basic_net/: correct_calculations.cpp
test/einsum/: test_einsum_binary.cpp  test_einsum_tree.cpp  test_einsum_unary.cpp
test/mini_jit/: test_brgemm.cpp  test_gemm.cpp  test_generators.cpp  test_instructions.cpp  test_unary.cpp
test/tensor/: test_generators.cpp  test_tensor.cpp
test/test_utils/: test_utils.cpp  test_utils.h
