add_executable(TensorOperationTests TensorOperationTests.cpp)
target_link_libraries(TensorOperationTests PRIVATE Catch2::Catch2WithMain TenGen xtensor xtl)
target_include_directories(TensorOperationTests PRIVATE ${CMAKE_SOURCE_DIR}/TenGen)
add_test(NAME TensorOperationTests COMMAND TensorOperationTests)
